cpp/inspireface/c_api/inspireface.h


typedef struct HFSessionCustomParameter {
    HInt32 enable_recognition;           
    HInt32 enable_liveness;              
    HInt32 enable_ir_liveness;           
    HInt32 enable_mask_detect;           
    HInt32 enable_face_quality;          
    HInt32 enable_face_attribute;        
    HInt32 enable_interaction_liveness;  
    HInt32 enable_detect_mode_landmark;  
    HInt32 enable_face_pose;             
    HInt32 enable_face_emotion;          
} HFSessionCustomParameter, *PHFSessionCustomParameter;
typedef enum HFDetectMode {
    HF_DETECT_MODE_ALWAYS_DETECT,       
    HF_DETECT_MODE_LIGHT_TRACK,         
    HF_DETECT_MODE_TRACK_BY_DETECTION,  
} HFDetectMode;
typedef struct HFSessionConfigV2 {
    HFUInt32 structSize;              
    HFUInt32 structVersion;           
    HFUInt64 featureMask;             
    HInt32 detectMode;                
    HInt32 maxDetectFaceNum;          
    HInt32 detectPixelLevel;          
    HInt32 trackByDetectModeFPS;      
    HFUInt32 reserved[8];             
} HFSessionConfigV2, *PHFSessionConfigV2;
typedef enum HFSessionLandmarkEngine {
    HF_LANDMARK_HYPLMV2_0_25 = 0,             
    HF_LANDMARK_HYPLMV2_0_50 = 1,             
    HF_LANDMARK_INSIGHTFACE_2D106_TRACK = 2,  
} HFSessionLandmarkEngine;
HYPER_CAPI_EXPORT extern HResult HFSwitchLandmarkEngine(HFSessionLandmarkEngine engine);
typedef struct HFFaceDetectPixelList {
    HInt32 pixel_level[20];
    HInt32 size;
} HFFaceDetectPixelList, *PHFFaceDetectPixelList;
HYPER_CAPI_EXPORT extern HResult HFQuerySupportedPixelLevelsForFaceDetection(PHFFaceDetectPixelList pixel_levels);
HYPER_CAPI_EXPORT extern HResult HFCreateInspireFaceSession(HFSessionCustomParameter parameter, HFDetectMode detectMode, HInt32 maxDetectFaceNum,
                                                            HInt32 detectPixelLevel, HInt32 trackByDetectModeFPS, PHFSession handle);
HYPER_CAPI_EXPORT extern HResult HFCreateInspireFaceSessionOptional(HOption customOption, HFDetectMode detectMode, HInt32 maxDetectFaceNum,
                                                                    HInt32 detectPixelLevel, HInt32 trackByDetectModeFPS, PHFSession handle);
HYPER_CAPI_EXPORT extern HFStatus HFCreateInspireFaceSessionV2(const HFSessionConfigV2* config, PHFSession handle);
HYPER_CAPI_EXPORT extern HResult HFReleaseInspireFaceSession(HFSession handle);
typedef struct HFFaceBasicToken {
    HInt32 size;  
    HPVoid data;  
} HFFaceBasicToken, *PHFFaceBasicToken;
typedef struct HFFaceEulerAngle {
    HPFloat roll;   
    HPFloat yaw;    
    HPFloat pitch;  
} HFFaceEulerAngle;
typedef struct HFMultipleFaceData {
    HInt32 detectedNum;        
    PHFaceRect rects;          
    HPInt32 trackIds;          
    HPInt32 trackCounts;       
    HPFloat detConfidence;     
    HFFaceEulerAngle angles;   
    PHFFaceBasicToken tokens;  
} HFMultipleFaceData, *PHFMultipleFaceData;
HYPER_CAPI_EXPORT extern HResult HFSessionClearTrackingFace(HFSession session);
HYPER_CAPI_EXPORT extern HResult HFSessionSetTrackLostRecoveryMode(HFSession session, HInt32 enable);
HYPER_CAPI_EXPORT extern HResult HFSessionSetLightTrackConfidenceThreshold(HFSession session, HFloat value);
HYPER_CAPI_EXPORT extern HResult HFSessionSetTrackPreviewSize(HFSession session, HInt32 previewSize);
HYPER_CAPI_EXPORT extern HResult HFSessionGetTrackPreviewSize(HFSession session, HPInt32 previewSize);
HYPER_CAPI_EXPORT extern HResult HFSessionSetFilterMinimumFacePixelSize(HFSession session, HInt32 minSize);
HYPER_CAPI_EXPORT extern HResult HFSessionSetFaceDetectThreshold(HFSession session, HFloat threshold);
HYPER_CAPI_EXPORT extern HResult HFSessionSetTrackModeSmoothRatio(HFSession session, HFloat ratio);
HYPER_CAPI_EXPORT extern HResult HFSessionSetTrackModeNumSmoothCacheFrame(HFSession session, HInt32 num);
HYPER_CAPI_EXPORT extern HResult HFSessionSetTrackModeDetectInterval(HFSession session, HInt32 num);
HYPER_CAPI_EXPORT extern HResult HFSessionSetLandmarkAugmentationNum(HFSession session, HInt32 num);
HYPER_CAPI_EXPORT extern HResult HFExecuteFaceTrack(HFSession session, HFImageStream streamHandle, PHFMultipleFaceData results);
HYPER_CAPI_EXPORT extern HResult HFExecuteFaceTrackSnapshot(HFSession session, HFImageStream streamHandle,
                                                            PHFFaceResultSnapshot snapshot);
HYPER_CAPI_EXPORT extern HResult HFGetFaceResultSnapshotData(HFFaceResultSnapshot snapshot, PHFMultipleFaceData results);
HYPER_CAPI_EXPORT extern HResult HFReleaseFaceResultSnapshot(HFFaceResultSnapshot snapshot);
HYPER_CAPI_EXPORT extern HResult HFSessionLastFaceDetectionGetDebugPreviewImageSize(HFSession session, HPInt32 size);