cpp/inspireface/c_api/intypedef.h


typedef void*               HFImageStream;                    
typedef void*               HFSession;                        
typedef void**              PHFSession;                       
typedef void*               HFFaceResultSnapshot;             
typedef void**              PHFFaceResultSnapshot;            
typedef void*               HPVoid;                           
typedef float               HFloat;                           
typedef float*              HPFloat;                          
typedef signed int			HInt32;                           
typedef signed int			HOption;                          
typedef signed int*			HPInt32;                          
typedef int32_t             HFStatus;                         
typedef uint32_t            HFUInt32;                         
typedef uint64_t            HFUInt64;                         
typedef long                HResult;                          
typedef struct HFaceRect {
    HInt32 x;                                                 
    HInt32 y;                                                 
    HInt32 width;                                             
    HInt32 height;                                            
} HFaceRect, *PHFaceRect;                                     