python/inspireface/modules/core/native.py


struct_HFSessionConfigV2.__slots__ = [
    'structSize',
    'structVersion',
    'featureMask',
    'detectMode',
    'maxDetectFaceNum',
    'detectPixelLevel',
    'trackByDetectModeFPS',
    'reserved',
]
struct_HFSessionConfigV2._fields_ = [
    ('structSize', HFUInt32),
    ('structVersion', HFUInt32),
    ('featureMask', HFUInt64),
    ('detectMode', HInt32),
    ('maxDetectFaceNum', HInt32),
    ('detectPixelLevel', HInt32),
    ('trackByDetectModeFPS', HInt32),
    ('reserved', HFUInt32 * int(8)),
]

HFSessionConfigV2 = struct_HFSessionConfigV2

PHFSessionConfigV2 = POINTER(struct_HFSessionConfigV2)

enum_HFSessionLandmarkEngine = c_int# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 507

HF_LANDMARK_HYPLMV2_0_25 = 0# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 507

HF_LANDMARK_HYPLMV2_0_50 = 1# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 507

HF_LANDMARK_INSIGHTFACE_2D106_TRACK = 2# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 507

HFSessionLandmarkEngine = enum_HFSessionLandmarkEngine# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 507

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 515
if _libs[_LIBRARY_FILENAME].has("HFSwitchLandmarkEngine", "cdecl"):
    HFSwitchLandmarkEngine = _libs[_LIBRARY_FILENAME].get("HFSwitchLandmarkEngine", "cdecl")
    HFSwitchLandmarkEngine.argtypes = [HFSessionLandmarkEngine]
    HFSwitchLandmarkEngine.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 523
class struct_HFFaceDetectPixelList(Structure):
    pass

struct_HFFaceDetectPixelList.__slots__ = [
    'pixel_level',
    'size',
]
struct_HFFaceDetectPixelList._fields_ = [
    ('pixel_level', HInt32 * int(20)),
    ('size', HInt32),
]

HFFaceDetectPixelList = struct_HFFaceDetectPixelList# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 523

PHFFaceDetectPixelList = POINTER(struct_HFFaceDetectPixelList)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 523

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 530
if _libs[_LIBRARY_FILENAME].has("HFQuerySupportedPixelLevelsForFaceDetection", "cdecl"):
    HFQuerySupportedPixelLevelsForFaceDetection = _libs[_LIBRARY_FILENAME].get("HFQuerySupportedPixelLevelsForFaceDetection", "cdecl")
    HFQuerySupportedPixelLevelsForFaceDetection.argtypes = [PHFFaceDetectPixelList]
    HFQuerySupportedPixelLevelsForFaceDetection.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 546
if _libs[_LIBRARY_FILENAME].has("HFCreateInspireFaceSession", "cdecl"):
    HFCreateInspireFaceSession = _libs[_LIBRARY_FILENAME].get("HFCreateInspireFaceSession", "cdecl")
    HFCreateInspireFaceSession.argtypes = [HFSessionCustomParameter, HFDetectMode, HInt32, HInt32, HInt32, PHFSession]
    HFCreateInspireFaceSession.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 563
if _libs[_LIBRARY_FILENAME].has("HFCreateInspireFaceSessionOptional", "cdecl"):
    HFCreateInspireFaceSessionOptional = _libs[_LIBRARY_FILENAME].get("HFCreateInspireFaceSessionOptional", "cdecl")
    HFCreateInspireFaceSessionOptional.argtypes = [HOption, HFDetectMode, HInt32, HInt32, HInt32, PHFSession]
    HFCreateInspireFaceSessionOptional.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFCreateInspireFaceSessionV2", "cdecl"):
    HFCreateInspireFaceSessionV2 = _libs[_LIBRARY_FILENAME].get("HFCreateInspireFaceSessionV2", "cdecl")
    HFCreateInspireFaceSessionV2.argtypes = [PHFSessionConfigV2, PHFSession]
    HFCreateInspireFaceSessionV2.restype = HFStatus

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 572
if _libs[_LIBRARY_FILENAME].has("HFReleaseInspireFaceSession", "cdecl"):
    HFReleaseInspireFaceSession = _libs[_LIBRARY_FILENAME].get("HFReleaseInspireFaceSession", "cdecl")
    HFReleaseInspireFaceSession.argtypes = [HFSession]
    HFReleaseInspireFaceSession.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 589
class struct_HFFaceBasicToken(Structure):
    pass

struct_HFFaceBasicToken.__slots__ = [
    'size',
    'data',
]
struct_HFFaceBasicToken._fields_ = [
    ('size', HInt32),
    ('data', HPVoid),
]

HFFaceBasicToken = struct_HFFaceBasicToken# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 589

PHFFaceBasicToken = POINTER(struct_HFFaceBasicToken)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 589

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 600
class struct_HFFaceEulerAngle(Structure):
    pass

struct_HFFaceEulerAngle.__slots__ = [
    'roll',
    'yaw',
    'pitch',
]
struct_HFFaceEulerAngle._fields_ = [
    ('roll', HPFloat),
    ('yaw', HPFloat),
    ('pitch', HPFloat),
]

HFFaceEulerAngle = struct_HFFaceEulerAngle# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 600

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 616
class struct_HFMultipleFaceData(Structure):
    pass

struct_HFMultipleFaceData.__slots__ = [
    'detectedNum',
    'rects',
    'trackIds',
    'trackCounts',
    'detConfidence',
    'angles',
    'tokens',
]
struct_HFMultipleFaceData._fields_ = [
    ('detectedNum', HInt32),
    ('rects', PHFaceRect),
    ('trackIds', HPInt32),
    ('trackCounts', HPInt32),
    ('detConfidence', HPFloat),
    ('angles', HFFaceEulerAngle),
    ('tokens', PHFFaceBasicToken),
]

HFMultipleFaceData = struct_HFMultipleFaceData# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 616

PHFMultipleFaceData = POINTER(struct_HFMultipleFaceData)# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 616

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 623
if _libs[_LIBRARY_FILENAME].has("HFSessionClearTrackingFace", "cdecl"):
    HFSessionClearTrackingFace = _libs[_LIBRARY_FILENAME].get("HFSessionClearTrackingFace", "cdecl")
    HFSessionClearTrackingFace.argtypes = [HFSession]
    HFSessionClearTrackingFace.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 631
if _libs[_LIBRARY_FILENAME].has("HFSessionSetTrackLostRecoveryMode", "cdecl"):
    HFSessionSetTrackLostRecoveryMode = _libs[_LIBRARY_FILENAME].get("HFSessionSetTrackLostRecoveryMode", "cdecl")
    HFSessionSetTrackLostRecoveryMode.argtypes = [HFSession, HInt32]
    HFSessionSetTrackLostRecoveryMode.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 639
if _libs[_LIBRARY_FILENAME].has("HFSessionSetLightTrackConfidenceThreshold", "cdecl"):
    HFSessionSetLightTrackConfidenceThreshold = _libs[_LIBRARY_FILENAME].get("HFSessionSetLightTrackConfidenceThreshold", "cdecl")
    HFSessionSetLightTrackConfidenceThreshold.argtypes = [HFSession, HFloat]
    HFSessionSetLightTrackConfidenceThreshold.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 649
if _libs[_LIBRARY_FILENAME].has("HFSessionSetTrackPreviewSize", "cdecl"):
    HFSessionSetTrackPreviewSize = _libs[_LIBRARY_FILENAME].get("HFSessionSetTrackPreviewSize", "cdecl")
    HFSessionSetTrackPreviewSize.argtypes = [HFSession, HInt32]
    HFSessionSetTrackPreviewSize.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 657
if _libs[_LIBRARY_FILENAME].has("HFSessionGetTrackPreviewSize", "cdecl"):
    HFSessionGetTrackPreviewSize = _libs[_LIBRARY_FILENAME].get("HFSessionGetTrackPreviewSize", "cdecl")
    HFSessionGetTrackPreviewSize.argtypes = [HFSession, HPInt32]
    HFSessionGetTrackPreviewSize.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 667
if _libs[_LIBRARY_FILENAME].has("HFSessionSetFilterMinimumFacePixelSize", "cdecl"):
    HFSessionSetFilterMinimumFacePixelSize = _libs[_LIBRARY_FILENAME].get("HFSessionSetFilterMinimumFacePixelSize", "cdecl")
    HFSessionSetFilterMinimumFacePixelSize.argtypes = [HFSession, HInt32]
    HFSessionSetFilterMinimumFacePixelSize.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 676
if _libs[_LIBRARY_FILENAME].has("HFSessionSetFaceDetectThreshold", "cdecl"):
    HFSessionSetFaceDetectThreshold = _libs[_LIBRARY_FILENAME].get("HFSessionSetFaceDetectThreshold", "cdecl")
    HFSessionSetFaceDetectThreshold.argtypes = [HFSession, HFloat]
    HFSessionSetFaceDetectThreshold.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 685
if _libs[_LIBRARY_FILENAME].has("HFSessionSetTrackModeSmoothRatio", "cdecl"):
    HFSessionSetTrackModeSmoothRatio = _libs[_LIBRARY_FILENAME].get("HFSessionSetTrackModeSmoothRatio", "cdecl")
    HFSessionSetTrackModeSmoothRatio.argtypes = [HFSession, HFloat]
    HFSessionSetTrackModeSmoothRatio.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 694
if _libs[_LIBRARY_FILENAME].has("HFSessionSetTrackModeNumSmoothCacheFrame", "cdecl"):
    HFSessionSetTrackModeNumSmoothCacheFrame = _libs[_LIBRARY_FILENAME].get("HFSessionSetTrackModeNumSmoothCacheFrame", "cdecl")
    HFSessionSetTrackModeNumSmoothCacheFrame.argtypes = [HFSession, HInt32]
    HFSessionSetTrackModeNumSmoothCacheFrame.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 703
if _libs[_LIBRARY_FILENAME].has("HFSessionSetTrackModeDetectInterval", "cdecl"):
    HFSessionSetTrackModeDetectInterval = _libs[_LIBRARY_FILENAME].get("HFSessionSetTrackModeDetectInterval", "cdecl")
    HFSessionSetTrackModeDetectInterval.argtypes = [HFSession, HInt32]
    HFSessionSetTrackModeDetectInterval.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h
if _libs[_LIBRARY_FILENAME].has("HFSessionSetLandmarkAugmentationNum", "cdecl"):
    HFSessionSetLandmarkAugmentationNum = _libs[_LIBRARY_FILENAME].get("HFSessionSetLandmarkAugmentationNum", "cdecl")
    HFSessionSetLandmarkAugmentationNum.argtypes = [HFSession, HInt32]
    HFSessionSetLandmarkAugmentationNum.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 713
if _libs[_LIBRARY_FILENAME].has("HFExecuteFaceTrack", "cdecl"):
    HFExecuteFaceTrack = _libs[_LIBRARY_FILENAME].get("HFExecuteFaceTrack", "cdecl")
    HFExecuteFaceTrack.argtypes = [HFSession, HFImageStream, PHFMultipleFaceData]
    HFExecuteFaceTrack.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFExecuteFaceTrackSnapshot", "cdecl"):
    HFExecuteFaceTrackSnapshot = _libs[_LIBRARY_FILENAME].get("HFExecuteFaceTrackSnapshot", "cdecl")
    HFExecuteFaceTrackSnapshot.argtypes = [HFSession, HFImageStream, PHFFaceResultSnapshot]
    HFExecuteFaceTrackSnapshot.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFGetFaceResultSnapshotData", "cdecl"):
    HFGetFaceResultSnapshotData = _libs[_LIBRARY_FILENAME].get("HFGetFaceResultSnapshotData", "cdecl")
    HFGetFaceResultSnapshotData.argtypes = [HFFaceResultSnapshot, PHFMultipleFaceData]
    HFGetFaceResultSnapshotData.restype = HResult

if _libs[_LIBRARY_FILENAME].has("HFReleaseFaceResultSnapshot", "cdecl"):
    HFReleaseFaceResultSnapshot = _libs[_LIBRARY_FILENAME].get("HFReleaseFaceResultSnapshot", "cdecl")
    HFReleaseFaceResultSnapshot.argtypes = [HFFaceResultSnapshot]
    HFReleaseFaceResultSnapshot.restype = HResult

# /Users/tunm/work/InspireFace/cpp/inspireface/c_api/inspireface.h: 721
if _libs[_LIBRARY_FILENAME].has("HFSessionLastFaceDetectionGetDebugPreviewImageSize", "cdecl"):
    HFSessionLastFaceDetectionGetDebugPreviewImageSize = _libs[_LIBRARY_FILENAME].get("HFSessionLastFaceDetectionGetDebugPreviewImageSize", "cdecl")
    HFSessionLastFaceDetectionGetDebugPreviewImageSize.argtypes = [HFSession, HPInt32]
    HFSessionLastFaceDetectionGetDebugPreviewImageSize.restype = HResult
